--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "package",
+  "name": "mongoweek8",
   "version": "1.0.0",
-  "description": "json",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2"
   }
 }
