--- a/Week8/package.json
+++ b/Week8/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "package",
+  "name": "week-8",
   "version": "1.0.0",
-  "description": "json",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.2"
   }
 }
